# tener-ai-v1

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  Tener_AI_Life_Sciences_Product_Specification.docx  package.json  pyproject.toml  railway.toml  render.yaml  tener-ls-architecture-versions-plan.md  tener-ls-e2e-test-scenario.md  tener-verification-types.md
AgentsOffice-prototype/: AI_TOWN_CREDITS.html  AI_TOWN_CREDITS.md  demo-jobs.json  index.html  office-data.js  office-engine.js  scenario.json
Fiverr-prototype/: index.html  results.html  searching.html
IT-prototype/: index.html  outreach.html  results.html  searching.html
LiveRamp-prototype/: index.html  outreach.html  results.html  searching.html
SkilledTrades-prototype/: landing.html  search.html  shortlist.html
Toptal-prototype/: index.html  results.html  searching.html
Zalando-prototype/: index.html  outreach.html  results.html  searching.html
config/: agent_evaluation_instructions.json  agent_instructions.json  candidate_scoring_formula.json  company_profile.json  forced_test_linkedin_ids.txt  interview_question_generation_guidelines.json  interview_total_score_formula.json  interview_transcription_scoring_criteria.json  linkedin_outreach_policy.json  matching_rules.json  outreach_templates.json  signal_rules.json
data/: mock_linkedin_profiles.json
docs/: ai_interview_hireflix_live.md  ai_interview_module_contract.md  company_culture_profile_module_contract.md  easysofthire_deploy_runbook.md  postgres_signals_ops_runbook.md
migrations/: 0001_init_postgres.sql  (+17 more)
public/: app.js  (+2 more)
(+226 files in other folders)
